cilium/hubble/00_gateway_class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: cilium
spec:
    controllerName: io.cilium/gateway-controller
