cilium/hubble/01_hubble_gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: prod-gw
    namespace: kube-system
spec:
    gatewayClassName: cilium
    listeners:
        - name: https
          protocol: HTTPS
          port: 443
          hostname: hubble.prod.cilium.example.com
          tls:
              mode: Terminate
              certificateRefs:
                  - kind: Secret
                    name: hubble-tls # create this secret in kube-system
        - name: http-redirect
          protocol: HTTP
          port: 80
          hostname: hubble.prod.cilium.example.com
          allowedRoutes:
              namespaces:
                  from: Same
    infrastructure:
        # These get propagated to the underlying LoadBalancer Service created by Cilium
        labels:
            lb.cilium.io/pool: "dc1" # <- matches your CiliumLoadBalancerIPPool.serviceSelector
