cilium/hubble/02_hubble_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hubble-ui
    namespace: kube-system
spec:
    parentRefs:
        - kind: Gateway
          name: prod-gw
    hostnames:
        - hubble.prod.cilium.example.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: hubble-ui
                port: 80
